--- a/devel/todo.org
+++ b/devel/todo.org
@@ -8,3 +8,6 @@
 ##' data.table. But it's a little complicated if you want more than
 ##' the means results. This works:
 ##' dt[,append(means(DV,ci=TRUE),list(N=.N))]
+** TODO logit and invlogit
+logit <- function(x) log(x/(1-x))
+invlogit <- function(x) 1/(1+exp(-x))
